--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Fa<span class="text-primary-colour">h</span>im</h3>
 
@@ -25,6 +25,21 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+
+    <div class="banner">
+
+        <div class="banner-content">
+          <h3 class="banner-greating">Hi, I am</h3>  
+          <h1 class="banner-title">Fahim Rashid</h1>
+          <p>Shot what able cold new see hold. Griendly as an 
+            betrayed formerly he.Mornig because as to society 
+            behaved moments.</p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+        </div>
+        <img class="profile-pic" src="image/fhaim.png" alt="">
+
+    </div>
 
     </header>
 
