--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="banner-content">
           <h3 class="banner-greating">Hi, I am</h3>  
           <h1 class="banner-title">Fahim Rashid</h1>
-          <p>Shot what able cold new see hold. Griendly as an 
+          <p class="banner-discription">Shot what able cold new see hold. Griendly as an 
             betrayed formerly he.Mornig because as to society 
             behaved moments.</p>
             <button class="btn-primary">Download CV</button>
@@ -43,9 +43,19 @@
 
     </header>
 
-
-
     <main>
+        <section class="about">
+            <h3 class="section-title">About me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web 
+                design, I enjoy developing simple, clean and slick
+                websites that provide real value to the end user.
+                Thousands of clients have procured exceptional results 
+                while working with me . Delivering work with in time and 
+                budget which meet clients requirements in our mata  
+            </p>
+
+        </section>
 
     </main>
 
