skill section added and icon added

--- a/index.html
+++ b/index.html
@@ -55,10 +55,85 @@
                 budget which meet clients requirements in our mata  
             </p>
 
+
+
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name</h4>
+                    <p class="info-discription">Fahim Rashid</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email</h4>
+                    <p class="info-discription">fahimrashid350@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Phone</h4>
+                    <p class="info-discription">+8801405819175</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From</h4>
+                    <p class="info-discription">Dhaka, Bangladesh</p>
+                </div>
+            </div>
+
         </section>
 
-    </main>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p id="what-i-do-driscription" class="section-discription">
+                I have more than 10 years experience building software for
+                clients all over the world . Below is a quick overview of my 
+                main technical skill sets and technologies i use. do you want to find
+                out more about my experience? Check out my online resume and 
+                project protfolio.
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img class="icon-what-i-do" src="image/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-discription">List skill/ technologies here.
+                        You can change the icon above to any of the 1500+ 
+                        FontAwesom 5 free icons available. Anean commodo 
+                        ligula eget dolor.
+                     </p>
+                </div>
+                <div class="skill">
+                    <img class="icon-what-i-do" src="image/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-discription">
+                        List skill/ technologies here.
+                        You can change the icon above to any of the 1500+ 
+                        FontAwesom 5 free icons available. Anean commodo 
+                        ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img class="icon-what-i-do" src="image/icons/mongodb.png" alt="">
+                    <h3 class="skill-title">Mongo DB</h3>
+                    <p class="skill-discription">
+                        List skill/ technologies here.
+                        You can change the icon above to any of the 1500+ 
+                        FontAwesom 5 free icons available. Anean commodo 
+                        ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img class="icon-what-i-do" src="image/icons/modejs.jpg" alt="">
+                    <h3 class="skill-title">Mode js</h3>
+                    <p class="skill-discription">
+                        List skill/ technologies here.
+                        You can change the icon above to any of the 1500+ 
+                        FontAwesom 5 free icons available. Anean commodo 
+                        ligula eget dolor.
+                    </p>
+                </div>
+            </div>
 
+        </section>
+
+
+    </main>
 
 
     <footer>
