--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </header>
 
-    <!-- main sectionn start here -->
+    <!-- main section start here -->
 
     <main>
         <!-- about me section  -->
@@ -237,6 +237,30 @@
 
 
     <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Connect</h3>
+            <p class="section-description">Plese fill out the form on this section 
+                to contact with me or call between 9.00 a.m and 8.00 p.m BST, Monday 
+                Through Friday
+            </p>
+            <div class="social-links">
+                <a href="https://www.facebook.com/fahimrashid.fb"><img class="footer-icon" src="image/icons/fb.png" alt=""></a>
+                <a href="https://twitter.com/FahimRashid20"><img class="footer-icon" src="image/icons/x.png" alt=""></a>
+                <a href="https://www.instagram.com/fahimrashid1/"><img class="footer-icon" src="image/icons/instra.png" alt=""></a>
+
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Message me</h3>
+
+            <form class="contact" action="">
+                <input type="text" placeholder="Your name">
+                <input type="email" name="" placeholder="Your email" id="">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input id="footer-btn" class="btn-primary" type="submit" value="submit">
+            </form>
+        </div>
+        </div>
 
     </footer>
 
